[package]
name = "falsepng"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Library for adding fake backgrounds to perfectly fine PNGs"
documentation = "https://docs.rs/falsepng"
readme = "README.md"
homepage = "https://github.com/ewpratten/falsepng"
repository = "https://github.com/ewpratten/falsepng"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
num-traits = "0.2"